welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: not found: value >=
    case (Math.abs(n-100)>=10) => return false
                         ^nearHundred:3: error: value abs is not a case class, nor does it have an unapply/unapplySeq member
    case (Math.abs(n-100)>=10) => return false
               ^nearHundred:3: error: not found: value -
    case (Math.abs(n-100)>=10) => return false
                    ^nearHundred:4: error: not found: value >=
    case (Math.abs(n-200)>=10) => return false
                         ^nearHundred:4: error: value abs is not a case class, nor does it have an unapply/unapplySeq member
    case (Math.abs(n-200)>=10) => return false
               ^nearHundred:4: error: not found: value -
    case (Math.abs(n-200)>=10) => return false
                    ^nearHundred:5: error: not found: value <
    case (Math.abs(n-100)<10) => return true
                         ^nearHundred:5: error: value abs is not a case class, nor does it have an unapply/unapplySeq member
    case (Math.abs(n-100)<10) => return true
               ^nearHundred:5: error: not found: value -
    case (Math.abs(n-100)<10) => return true
                    ^nearHundred:6: error: not found: value <
    case (Math.abs(n-200)<10) => return false
                         ^nearHundred:6: error: value abs is not a case class, nor does it have an unapply/unapplySeq member
    case (Math.abs(n-200)<10) => return false
               ^nearHundred:6: error: not found: value -
    case (Math.abs(n-200)<10) => return false
                    ^